<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_receipt_add_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fitsSystemWindows="false"
        android:padding="@dimen/global_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/receipt_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/add_receipt"
            android:maxWidth="220dp"
            android:maxHeight="220dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_image"
            tools:src="@drawable/ic_baseline_image" />

        <LinearLayout
            android:id="@+id/receipt_calendar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receipt_picture"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/receipt_input_date"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="6"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:padding="4dp"
                tools:text="30 November 2018" />

            <ImageView
                android:id="@+id/receipt_input_date_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="4dp"
                android:src="@drawable/calendar_icon"
                android:tint="@color/DarkOrange" />

        </LinearLayout>


        <EditText
            android:id="@+id/receipt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receipt_calendar_container"
            android:hint="@string/type_title_receipt"
            android:maxLines="2" />

        <LinearLayout
            android:id="@+id/value_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receipt_title"
            android:orientation="horizontal"
            android:padding="@dimen/global_padding"
            android:weightSum="9">

            <EditText
                android:id="@+id/receipt_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/type_total_value_of_receipt"
                android:inputType="numberDecimal"
                android:maxLines="2"
                android:padding="@dimen/global_padding" />

            <ImageView
                android:id="@+id/receipt_value_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="@dimen/global_padding"
                android:src="@drawable/ic_round_monetization_on"
                android:tint="@color/BlueViolet"
                tools:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/receipt_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/value_container"
            android:layout_alignParentEnd="true"
            android:background="@color/accent"
            android:enabled="false"
            android:text="@string/save" />

    </RelativeLayout>
</ScrollView>